# scribbles

./: README.md  pyproject.toml  requirements.txt
src/: editor.py  main.py
